--- a/templates/default.erb
+++ b/templates/default.erb
@@ -1,11 +1,17 @@
 ENABLED="<%= defaultenabled %>"
-OPTIONS="<%if backends.is_a? Array -%>
+
+PROXY_OPTIONS="<%if backends.is_a? Array -%>
 <% backends.each do |backend| -%><%= "--proxy-backend-addresses=#{backend} " %><% end -%>
 <% elsif backends != '' -%>
 <%= "--proxy-backend-addresses=#{backends} " -%>
 <% end -%>
+<%if slaves.is_a? Array -%>
+<% slaves.each do |slave| -%><%= "--proxy-read-only-backend-addresses=#{slave} " %><% end -%>
+<% elsif slaves != '' -%>
+<%= "--proxy-read-only-backend-addresses=#{slaves} " -%>
+<% end -%>
 <% if luascript != '' -%>
-<%= "--proxy-lua-script=/etc/mysql-proxy/lua.d/#{luascript} " -%>
+<%= "--proxy-lua-script=#{luascript} " -%>
 <% end -%>
 <% if address != '' -%>
 <%= "--proxy-address=#{address} " -%>
@@ -21,5 +27,11 @@ OPTIONS="<%if backends.is_a? Array -%>
 <% end -%>
 <% if adminluascript != '' -%>
 <%= "--admin-lua-script=#{adminluascript} " -%>
+<% end -%>
+<% if log_level != '' -%>
+<%= "--log-level=#{log_level} " -%>
+<% end -%>
+<% if log_file != '' -%>
+<%= "--log-file=#{log_file} " -%>
 <% end -%>
 <%= options %>"
